UI implementation for the card views
Card ui with two buttons to accept/decline profiles. Buttons are replaced by
text stating users choice and the state is persisted in the DB.

This concludes all the requirements of the assignment.

There are various notes as comments in the code stating why some code decisions
were made and alternatives that can be used in case of changed requirements.
Further work would include working closely with the designer to ensure UI looks
acceptable and make any tweaks as suggested.

- Regular buttons were used rather than Image buttons for now.
- Didn't use CardView library for now. Can be added if necessary.

Day 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#eeeeee"
     tools:context=".MainActivity">
 
     <ProgressBar
@@ -18,10 +19,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/matches_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:overScrollMode="ifContentScrolls"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="5" />
+        tools:itemCount="5"
+        tools:listitem="@layout/item_match" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
